@@ -1,3 +1,6 @@
+2016-09-04  Kirit Saelensminde  <kirit@felspar.com>
+ `fost.view.pathprefix` can now take an embedded configuration.
+
 2016-07-30  Kirit Saelensminde  <kirit@felspar.com>
  `fost.response.401` can now be given an inner view for the response data.
 
